cart_overlay fix on IOS Safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -129,8 +129,8 @@ $contentWidth: 1240px;
                     width: 325px;
                     height: fit-content;
                     padding: 16px;
-                    margin-left: -300px;
-                    margin-top: 26px;
+                    right: -15px;
+                    top: 53px;
                     background: #FFFFFF;
                     z-index: 1;
 
@@ -143,7 +143,7 @@ $contentWidth: 1240px;
 
 
                     .for_scroll {
-                        min-height: fit-content;
+                        height: fit-content;
                         max-height: 50vh;
                         overflow-y: auto;
                     }
@@ -293,6 +293,17 @@ $contentWidth: 1240px;
 
                                 .quantity_number {
                                     @include font ('Raleway', 16px, #1D1F22, 600);
+                                }
+                            }
+
+                            .cart_photo {
+                                height: 100%;
+                                width: 100%;
+                                display: flex;
+                                align-items: center;
+
+                                img {
+                                    width: 100%;
                                 }
                             }
                         }
@@ -791,6 +802,7 @@ $contentWidth: 1240px;
 //by default, in differnet sections could be used a little other styles.
 .quantity_and_photo {
     display: flex;
+    height: 100%;
 
     .add_decrease_quantity {
         height: 100%;
@@ -814,18 +826,18 @@ $contentWidth: 1240px;
         .quantity_number {
             display: flex;
             justify-content: center;
+            align-items: center;
         }
     }
 
     .cart_photo {
-        width: fit-content;
         height: 100%;
+        width: 100%;
         display: flex;
         align-items: center;
 
         img {
             width: 100%;
-            height: fit-content;
         }
     }
 }
@@ -837,9 +849,6 @@ $contentWidth: 1240px;
         &_2 {
             width: 100%;
 
-            .cart_overlay {
-                margin-left: -295px !important;
-            }
         }
     }
 
